<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.theatria</groupId>
    <artifactId>theatria-onboarding</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>
    <name>TheatriaOnboarding</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- ====================================================================
             Server is Minecraft 26.1.2 (Mojang's 2026 year-based scheme).
             Paper changed its Maven version format for 26.1+: it is now
             {MCVERSION}.build.{N}-stable, NOT the old {VERSION}-R0.1-SNAPSHOT.
             Bump build.N to the latest stable build for 26.1.2 if needed
             (see https://repo.papermc.io/ or jd.papermc.io/paper/26.1.2/).
             Minecraft 26.1.2 requires JDK 25, so the build needs JDK 25 too.
             ==================================================================== -->
        <paper.version>26.1.2.build.69-stable</paper.version>
        <java.version>25</java.version>

        <!-- TheatriaSessions API (first-party) used for the DAILY task. Bump this
             to whatever version TheatriaSessions last published to GitHub Packages. -->
        <theatriasessions.version>v1.0.0-alpha.6</theatriasessions.version>
    </properties>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <!-- First-party TheatriaSessions artifact (the SessionsAPI). GitHub Packages
             requires authentication even to download, so add a matching <server> to
             your ~/.m2/settings.xml:

               <server>
                 <id>github-theatriasessions</id>
                 <username>YOUR_GITHUB_USERNAME</username>
                 <password>A_GITHUB_TOKEN_WITH_read:packages</password>
               </server>

             In CI, set username to ${env.GITHUB_ACTOR} and password to a token. -->
        <repository>
            <id>github-theatriasessions</id>
            <url>https://maven.pkg.github.com/JL-III/TheatriaSessions</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Server API (provided by the running server, not bundled). -->
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>${paper.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Optional: economy lookups for the EARN task. Soft-depend at runtime;
             the plugin degrades to a /sell command listener if Vault is absent. -->
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
            <scope>provided</scope>
        </dependency>

        <!-- First-party: the DAILY task reads TheatriaSessions' public SessionsAPI.
             'provided' = compiled against, supplied by the TheatriaSessions plugin at
             runtime (not bundled). Still a soft dependency: SessionsHook guards every
             use behind a plugin-presence check and falls back to the playtime
             statistic when TheatriaSessions is absent. -->
        <dependency>
            <groupId>com.playtheatria</groupId>
            <artifactId>theatriasessions</artifactId>
            <version>${theatriasessions.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.name}-${project.version}</finalName>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
